app/src/public/styles/style.css
/* ... */
h4 {
  color: #155084;
  text-align: center;
}

.creation-panel {
  color: black;
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 100%;
}

.customization-section {
  color: black;
  display: flex;
  flex-direction: row;
  height: 100%;
}

.state-panel {
  margin-top: -15px;
  flex-grow: 2;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.state-prop-grid {
  height: 300px;
  width: 410px;
  flex-grow: 1;
  padding-left: 10px;
  padding-right: 10px;
}

.HTMLItemCreate {
  flex-grow: 1;
  justify-content: center;
}

:disabled {
  cursor: not-allowed;
}

header {
  display: none;
}

.app-container {
  display: flex;
  width: 100%;
  height: calc(100vh - 64px);
}

.mode-change-button {
  display: flex;
  align-content: center;
  padding-top: 50px;
}

.progress-bar {
  flex-grow: 1;
}

.column {
  background-color: #1e2024;
  margin-right: 1.5px;
}

/*
/////////////////////////////////////////////////
LEFT COLUMN
/////////////////////////////////////////////////
*/

.app-container {
  position: relative;
}

.left-container {
  display: flex;
  z-index: 1;
  width: 100%;
  box-sizing: border-box;
}

span.material-symbols-outlined {
  padding: 1px;
  font-size: 18px;
}

.left {
  padding: 0px;
  display: flex;
  height: 100%;
  width: 282px;
  min-width: 282px;
  flex-direction: column;
  align-content: center;
  position: relative;
  overflow-x: hidden;
}

.column.left::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}

.column.left::-webkit-scrollbar-thumb {
  transition: 0.3s ease all;
  border-color: transparent;
  background-color: #1e2024;
  border-radius: 8px;
  z-index: 40;
}

.hide-show {
  position: absolute;
  height: 100%;
  left: -252px;
  transition: all 0.5s ease-in-out;
}

.hide-show:hover {
  left: 0px;
  z-index: 289;
}

.HTMLItems {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 100%;
  flex-grow: 1;
}

.HTMLItemsDark {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-wrap: wrap;
  flex-grow: 1;
  border: 3px solid white;
}

#Half {
  display: flex;
  flex-direction: column;
  justify-content: top;
  height: 60vh;
  text-align: center;
  overflow-x: hidden;
  overflow-y: auto;
}

#HTMLItemsTopHalf::-webkit-scrollbar {
  width: 0.8rem;
  height: 0.5rem;
}

#HTMLItemsTopHalf::-webkit-scrollbar-thumb {
  transition: 0.3s ease all;
  border-color: transparent;
  background-color: #1e2024;
  border-radius: 8px;
  z-index: 40;
}

#CompBottomHalf {
  flex-grow: 1;
  text-align: center;
  overflow-x: hidden;
  overflow-y: auto;
}

.HTMLElements {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  flex-wrap: wrap;
}

#HTMLgrid {
  margin: 5px;
  padding: 0;
}

#HTMLItemsGrid {
  display: flex;
}

/* THIS IS STYLING THE BUTTONS ON THE CREATE MENU */
#HTMLItem {
  /* justify-content: flex-start;  */
  transition: 0.3s;
  border: 1px solid transparent;
  color: #f2fbf8;
  padding: 10%;
  border-radius: 10px;
  box-shadow: #191919;
  width: 120px;
  white-space: nowrap;
}

#HTMLItem:hover {
  background-color: #474545a8;
  color: #8ca8ff;
  border-radius: 4px;
}

/* placeholder until button resizing */
#MUIItem {
  white-space: wrap;
  transition: 0.3s;
  border: 1px solid transparent;
  color: #f2fbf8;
  padding: 10%;
  border-radius: 10px;
  box-shadow: #191919;
  width: 110px;
}

.smallerText {
  font-size: 0.8rem;
}

.blueText {
  color: #8ca8ff;
}

.orangeText {
  color: #f08c00;
}
#MUIItem:hover {
  background-color: #474545a8;
  color: #f08c00;
}

#submitButton {
  margin-left: 5px;
}

#submitButton:hover {
  background-color: #f88e16;
  color: white;
  border: none;
  cursor: pointer;
}

.lineDiv {
  width: 150%;
  margin-left: 0px;
}

.customForm {
  display: flex;
  flex-direction: column;
  align-items: start;
  color: white;
  font-size: 95%;
}

.customForm h4 {
  align-self: center;
}

#newElement {
  border: none;
  background: none;
  display: flex;
  align-items: baseline;
  justify-content: flex-start;
  width: 0.5em;
}

/* span container in HTMLItem.tsx */
#customHTMLElement {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 125px;
}

.component-input {
  bottom: 2.8%;
}

.clear-workspace {
  top: 96%;
  position: sticky !important;
  z-index: 1;
}

.hidden {
  display: none;
}

/*
/////////////////////////////////////////////////
MAIN COLUMN
////////////////////////////////////////////////
*/

h1 {
  color: rgb(75, 75, 75);
}

.main-container {
  display: flex;
  flex-direction: column;
  flex: 1;
  min-width: 700px;
}

.main-header {
  background-color: #212121;
  box-shadow: 0 5px 7px -2px rgba(0, 0, 0, 0.1);
  z-index: 10;
}

.main-header-buttons {
  display: flex;
  font-size: 12px;
}

.main {
  background: #fff;
  flex: 1;
  width: 100%;
  overflow: auto;
  display: flex;
  background-color: #e4e4e4;
}

.draggable {
  position: relative;
}

.image {
  top: 0;
  left: 0;
  width: 100%;
  position: relative;
}

.image-container {
  position: relative;
  display: flex;
  top: 0;
  left: 0;
}

.export-preference div span {
  transition: 0.5s;
}

#export-modal {
  transition: 0.5s;
}

#export-modal:hover {
  background-color: #66c4eb;
  cursor: pointer;
}
/*                                                        ///CHANGED COLOR COLOR */
#export-modal:hover span {
  color: white;
}

.info {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.ace_scrollbar {
  display: none;
}

.ace_print-margin {
  display: none;
}

/*
//////////////////////////////////////////////////
RIGHT COLUMN
/////////////////////////////////////////////////
// RIGHT NOW, I'M NOT SURE WHAT RIGHT COL IS REFERING TO
*/
#rightContainer {
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 99.9%;
}

.right {
  padding-top: 0px;
  width: 100%;
  height: 100%;
}

.rightContainer {
  margin-top: 65px;
  color: black;
}
/* ... */

